link night mode fix, loader color change

--- a/app/app.less
+++ b/app/app.less
@@ -374,6 +374,10 @@ select {
     }
   }
 
+  .tab-button {
+    color: @night-link;
+  }
+
   .slide-open__menu {
     background-color: @night-section;
     border-color: @night-section;
