--- a/app/styles/tables.less
+++ b/app/styles/tables.less
@@ -24,7 +24,7 @@ table {
       }
 
       &:nth-child(even) {
-        background-color: @light-2;
+        background-color: white;
         border: 0;
       }
     }
