added border color back to active tabs, new icon for maximize screen, test widget button lowercase, move mixer tooltip to left as preview was cutting it off on live page

--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -395,6 +395,15 @@
 .icon-stats:before {
   content: "\e95a";
 }
+.icon-system-close:before {
+  content: "\e97d";
+}
+.icon-system-expand:before {
+  content: "\e97e";
+}
+.icon-system-minimize:before {
+  content: "\e97f";
+}
 
 // rule to rotate arrow
 .icon-down.icon-right {
