--- a/app/app.less
+++ b/app/app.less
@@ -50,6 +50,10 @@ h4 {
   color: @day-title;
 }
 
+label {
+  color: @day-paragraph;
+}
+
 .label--essential {
   background: @secondary;
   .radius;
@@ -241,8 +245,10 @@ a,
     color: @icon;
   }
 
-  &.is-active {
+  &.is-active,
+  &.active {
     color: @day-link-active;
+    border-bottom-color: @dark-2;
 
     .fa,
     i {
@@ -341,6 +347,10 @@ select {
     color: @white;
   }
 
+  label {
+    color: @night-paragraph;
+  }
+
   ::placeholder {
     opacity: .4;
   }
@@ -395,6 +405,7 @@ select {
 
   .tab-button{
     &.is-active,
+    &.active,
     &:hover {
       color: @night-link-active;
       border-bottom-color: @white;
