can delete alerts

--- a/app/styles/mixins.less
+++ b/app/styles/mixins.less
@@ -126,6 +126,10 @@
   margin: 10px;
 }
 
+.margin-top--10 {
+  margin-top: 10px;
+}
+
 .margin--20 {
   margin: 20px;
 }
@@ -192,6 +196,7 @@
     vertical-align: middle;
   }
 }
+
 
 .align-items--top {
   & > * {
