removed old fontawesome files, end stream button fix

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -168,6 +168,7 @@
 .button--soft-warning {
   color: @red;
   background: rgba(251,72,76,.16);
+  border-color: transparent;
 
   &:focus {
     color: @red;
