cleaning up button styles in new widget settings window and code editor

--- a/app/styles/_colors.less
+++ b/app/styles/_colors.less
@@ -96,7 +96,7 @@
 @day-link: #4F5E65;
 @day-link-active: #09161D;
 @day-input-border: #E3E8EB;
-@day-input-background: transparent;
+@day-input-bg: transparent;
 
 @night-bg: #17242D;
 @night-section: #09161D;
@@ -107,4 +107,4 @@
 @night-link: #BDC2C4;
 @night-link-active: #FFFFFF;
 @night-input-border: #2B383F;
-@night-input-background: #2B383F;
+@night-input-bg: #2B383F;
