Chatbot Alerts completed (#673)
* chat alerts can be toggled individually

* new alert mini modal added

* removed node lib again

* added text area back??

* changed chatbot widget inputs to the updated inputs

* fixed wtoggleinput

* creating new alert frontend complete

* added new alert modal controls

* almost done with creating new alerts, going to diff branch to fix NumberInput bug

* number input bug fix (will conflic with other work

* Reverting number input for the PR on number-input-fix branch to be used once merged

* dcmal points for amount

* removed filters

* fixing dropdownMenu

* minor

* can delete alerts

* can edit and delete alerts

* fixed some color for td

* updated interface type to prefix I

* updated state to camelCase

* refactored alerts

* minor

* fixed andy's comments

* removed debugger and changed asset ref path

* can toggle enable modtools

* merging chatbot feature

* protection caps window

* updated background image asset to work in packaged

* pulling from remote slobs-chatbot

* added new command window again

* chatbotpermissions enum converted to object

* fixing PR from alexs comments

* moved modal id to interfaces

--- a/app/app.less
+++ b/app/app.less
@@ -329,6 +329,10 @@ select {
     background-color: @night-bg;
   }
 
+  .v--modal-overlay {
+    background: rgba(0, 0, 0, 0.5);
+  }
+
   a {
     &:hover {
       color: @white;
