--- a/app/styles/mixins.less
+++ b/app/styles/mixins.less
@@ -108,6 +108,10 @@
   margin: 10px;
 }
 
+.margin-top--10 {
+  margin-top: 10px;
+}
+
 .margin--20 {
   margin: 20px;
 }
@@ -116,6 +120,11 @@
   margin: 10px 0;
 }
 
+
+// widths
+.width--100 {
+  width: 100% !important;
+}
 
 
 // flex helpers
@@ -174,6 +183,7 @@
     vertical-align: middle;
   }
 }
+
 
 .align-items--top {
   & > * {
