--- a/app/app.less
+++ b/app/app.less
@@ -310,6 +310,20 @@ select {
   opacity: 0;
 }
 
+.fade-enter-active {
+  transition: all .4s ease;
+}
+
+.fade-leave-active {
+  transition: all .2s ease;
+}
+
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+
 .v--modal-overlay {
   background: rgba(0, 0, 0, 0.3);
 }
