new updater window style, working on windows design updates, removing old colors

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -144,7 +144,9 @@
     background: lighten(#D22222, 4%);
   }
 
-  &:focus {
+  &:focus,
+  &:active,
+  &:disabled {
     background: #D22222;
   }
 }
