--- a/app/app.less
+++ b/app/app.less
@@ -34,6 +34,15 @@ body {
 }
 
 // Type
+h2 {
+  font-family: 'Roboto';
+  font-size: 16px;
+  .weight--medium();
+  text-transform: capitalize;
+  color: @day-title;
+  margin-bottom: 24px;
+}
+
 h3 {
   font-family: 'Roboto';
   font-size: 14px;
@@ -44,7 +53,6 @@ h4 {
   font-family: 'Roboto';
   text-transform: uppercase;
   font-size: 13px;
-  .letter-spacing;
   .weight--medium();
   margin-bottom: 20px;
   color: @day-title;
@@ -213,9 +221,8 @@ a,
   padding: 0px 12px;
   display: flex;
   z-index: 10;
-  .radius;
-  .border;
-  .shadow;
+  .radius();
+  .day-shadow();
 }
 
 .tabs {
@@ -339,12 +346,16 @@ select {
     border: 1px solid transparent;
   }
 
+  h2 {
+    color: @night-title;
+  }
+
   h3 {
     color: @grey;
   }
 
   h4 {
-    color: @white;
+    color: @night-title;
   }
 
   label {
