--- a/app/styles/classes.less
+++ b/app/styles/classes.less
@@ -38,73 +38,61 @@
   width: 100%;
 }
 
-// Margins
-.margin-bot--20 {
-  margin-bottom: 20px;
-}
-
 .margin-right--20 {
   margin-right: 20px;
 }
 
 .section {
-  padding: 20px 20px 0;
-  background: @day-primary;
-  border-bottom: 1px solid @day-border;
-
-  .button {
-    margin-bottom: 20px;
-  }
+  padding: 16px;
+  margin-bottom: 24px;
+  background: @day-section;
+  .radius();
 }
 
 .section-title--dropdown {
-  h4 {
-    margin-bottom: 20px;
+  h2 {
     cursor: pointer;
-  }
-}
+    margin-bottom: 0;
 
-.section-content--dropdown {
-  > div {
-    div {
-      &:last-child {
-        .input {
-          margin-bottom: 0;
-        }
-      }
+    i {
+      .margin-right();
     }
   }
 }
 
-.text--sm {
-  font-size: 11px;
+.section-title--opened {
+  margin-bottom: 24px;
 }
+
+.section-content {
+  margin-bottom: -24px;
+}
+
+// .section-content--dropdown {
+//   > div {
+//     div {
+//       &:last-child {
+//         .input {
+//           margin-bottom: 0;
+//         }
+//       }
+//     }
+//   }
+// }
 
 .noselect {
   user-select: none;
 }
 
-// Backgrounds
-.gradient--teal {
-  background: #31c3a2; /* Old browsers */
-  background: -moz-linear-gradient(-45deg, #31c3a2 1%, #20e5be 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(-45deg, #31c3a2 1%,#20e5be 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(135deg, #31c3a2 1%,#20e5be 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#31c3a2', endColorstr='#20e5be',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-}
-
 .night-theme {
   .section {
-    background: @night-primary;
-    border-color: @night-border;
+    background: @night-section;
   }
 }
-
 
 .input-error {
   color: @red;
 }
-
 
 // Tooltip for widgets
 .w-tooltip {
@@ -114,7 +102,6 @@
   align-self: center;
   display: inline-block;
 }
-
 
 // Toasts
 .toast-alert {
