--- a/app/styles/inputs.less
+++ b/app/styles/inputs.less
@@ -1,5 +1,5 @@
 .input-container {
-  margin-bottom: 20px;
+  margin-bottom: 24px;
   position: relative;
   display: flex;
 
@@ -22,7 +22,7 @@
 
 .input-label {
   width: 30%;
-  padding-right: 15px;
+  padding-right: 16px;
 }
 
 .input-wrapper {
@@ -62,6 +62,8 @@ textarea {
   color: @day-paragraph;
   .radius();
   box-shadow: none;
+  height: 36px;
+  padding: 0 10px;
 
   &:focus {
     box-shadow: none;
@@ -110,7 +112,7 @@ textarea {
   border: none;
   height: 0;
   min-height: 0;
-  .radius;
+  .radius();
 
   input[type="text"] {
     cursor: pointer;
@@ -159,6 +161,7 @@ textarea {
   .transition;
   display: block;
   cursor: pointer;
+  color: @day-paragraph;
 
   &:after {
     display: none;
@@ -167,7 +170,7 @@ textarea {
 
 .multiselect__option--highlight {
   background: @day-hover;
-  color: @navy;
+  color: @day-title;
 
   &:after {
     display: none;
@@ -214,9 +217,9 @@ textarea {
   input[type="password"],
   input[type="number"],
   textarea {
-    background: @night-secondary;
-    color: @white;
-    border-color: transparent;
+    background: @night-input-bg;
+    color: @night-paragraph;
+    border-color: @night-input-border;
 
     &.input--transparent {
       border-bottom: 1px dashed @grey;
@@ -224,23 +227,13 @@ textarea {
   }
 
   .multiselect__content {
-    background: @night-secondary;
-    border-color: @night-secondary;
+    background: @night-input-bg;
+    border-color: @night-input-border;
     color: @white;
   }
 
   .multiselect__option--highlight {
     background: @night-hover;
     color: @white;
-  }
-
-  .input-wrapper--inverted {
-    input[type="text"] {
-      background: @night-bg;
-    }
-
-    .multiselect__content {
-      background: @night-bg;
-    }
   }
 }
