--- a/app/styles/mixins.less
+++ b/app/styles/mixins.less
@@ -74,6 +74,27 @@
   margin-right: 8px;
 }
 
+// Margins
+.margin-top() {
+  margin-top: 8px;
+}
+
+.margin-right() {
+  margin-right: 8px;
+}
+
+.margin-bottom() {
+  margin-bottom: 8px;
+}
+
+.margin-bottom--16() {
+  margin-bottom: 16px;
+}
+
+.margin-left() {
+  margin-left: 8px;
+}
+
 // Paddings
 .no-padding-left {
   padding-left: 0;
@@ -84,12 +105,12 @@
 }
 
 // Shadows
-.shadow() {
-  box-shadow: 0 6px 14px @shadow;
+.day-shadow() {
+  box-shadow: 0 4px 10px @day-shadow;
 }
 
 .night-shadow() {
-  box-shadow: 0 6px 14px 1px rgba(1, 2, 2, 0.3);
+  box-shadow: 0 4px 10px @night-shadow;
 }
 
 // Transitiions
