add source scroll fix, improved source filters style, several small bug fixes

--- a/app/app.less
+++ b/app/app.less
@@ -47,6 +47,7 @@ h3 {
   font-family: 'Roboto';
   font-size: 14px;
   .weight--medium();
+  color: @day-title;
 }
 
 h4 {
@@ -351,7 +352,7 @@ select {
   }
 
   h3 {
-    color: @grey;
+    color: @night-title;
   }
 
   h4 {
