Various fixes for the design system CSS refactor (#698)
* removing old classes, updating color variables, updating fontawesome, style fix for filters window

* updating icons in settings window, updating button styles

* continued stylesheet updates, style fixes for transitions and advanced media, table updates,cont button updates

* 2 design fixes to onboarding, button width on connect step, widget alignment on select widget step

* icon fix for scene transitions, night mode table color fix

* test fix for transitions

* removing fontawesome svgs, not needed

* continued switching helper classes to mixins, commented out twitchalerts css, pulling new shared components into design system

* merge with staging

* yarn lock

* link night mode fix, loader color change

* added border color back to active tabs, new icon for maximize screen, test widget button lowercase, move mixer tooltip to left as preview was cutting it off on live page

* revert yarn.lock

* fix filters test

* fix streaming test

* removed old fontawesome files, end stream button fix

* cleaning up button styles in new widget settings window and code editor

* new updater window style, working on windows design updates, removing old colors

* add source scroll fix, improved source filters style, several small bug fixes

* indentation fix, removed commented out icon

* fix tests

* icon fixes for chatbox and donation ticker, made avd audio window wider

--- a/app/styles/mixins.less
+++ b/app/styles/mixins.less
@@ -74,6 +74,39 @@
   margin-right: 8px;
 }
 
+// Margins
+.margin-top() {
+  margin-top: 8px;
+}
+
+.margin-right() {
+  margin-right: 8px;
+}
+
+.margin-right--16() {
+  margin-right: 16px;
+}
+
+.margin-right--24() {
+  margin-right: 24px;
+}
+
+.margin-bottom() {
+  margin-bottom: 8px;
+}
+
+.margin-bottom--16() {
+  margin-bottom: 16px;
+}
+
+.margin-bottom--24() {
+  margin-bottom: 24px;
+}
+
+.margin-left() {
+  margin-left: 8px;
+}
+
 // Paddings
 .no-padding-left {
   padding-left: 0;
@@ -84,12 +117,12 @@
 }
 
 // Shadows
-.shadow() {
-  box-shadow: 0 6px 14px @shadow;
+.day-shadow() {
+  box-shadow: 0 4px 10px @day-shadow;
 }
 
 .night-shadow() {
-  box-shadow: 0 6px 14px 1px rgba(1, 2, 2, 0.3);
+  box-shadow: 0 4px 10px @night-shadow;
 }
 
 // Transitiions
